<resources>
    <string name="app_name">რა? სად? როდის?</string>
    <string name="group_practice">ინტელექტუალური ჩატი</string>
    <string name="tournir">ტურნირები</string>
    <string name="individual_practice">ინდივიდუალური პრაქტიკა</string>
    <string name="game_desc_individual">შეარჩიეთ სასურველი კითხვების რაოდენობა და ითამაშეთ \"რა? სად? როდის?\" ინდივიდუალურად</string>
    <string name="game_desc_tournir">შექმენით საავტორო ტურნირი ან გაეცანით არსებულ ტურნირებს და მიიღეთ მონაწილეობა </string>
    <string name="game_desc_group">მოიწვიეთ მეგობრები ინტელექტუალურ ჩატში, გაუზიარეთ ერთმანეთს საინტერესო კითხვები და იმსჯელეთ ერთად</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="question">კითხვა</string>
    <string name="some_interesting_activity">თქვენ რამდენიმე საინტერესო კითხვას გაეცანით</string>
    <string name="captain">კაპიტანი</string>
    <string name="host">წამყვანი</string>
    <string name="cannot_send_message">მესიჯის გაგზავნა ვერ მოხერხდა</string>
    <string name="write_message">დაწერეთ შეტყობინება…</string>
    <string name="username">მომხმარებლის სახელი</string>
    <string name="email">ელექტრონული ფოსტა</string>
    <string name="password">პაროლი</string>
    <string name="confirm_password">გაიმეორეთ</string>
    <string name="login">შესვლა</string>
    <string name="already_registered">დარეგისტირებული ხართ?</string>
    <string name="forgot_password">დაგავიწყდათ პაროლი?</string>
    <string name="dont_have_account">არ გაქვთ ანგარიში?</string>
    <string name="registration">რეგისტრაცია</string>
    <string name="congrats">გილოცავთ!</string>
    <string name="correct_answer">სწორი პასუხი</string>
    <string name="save">შენახვა</string>
    <string name="surname">გვარი</string>
    <string name="name">სახელი</string>
    <string name="logout">გამოსვლა</string>
    <string name="default_font" translatable="false">sans-serif-light</string>
    <string name="next">შემდეგი</string>
    <string name="choose_time">დროის არჩევა</string>
    <string name="tournir_name">ტურნირის სახელი</string>
    <string name="questionhint">დაწერეთ კითხვა…</string>
    <string name="answerhint">დაწერეთ პასუხი…</string>
    <string name="several_answers_possible">შეგიძლიათ დაამატოთ პასუხის რამდენიმე ვარიანტი, რომლებიც გამოყოფილი იქნება <b>;</b> სიმბოლოთი</string>
    <string name="tour_start_time_is">ტურნირის დაწყებამდე დარჩა</string>
    <string name="existing_tour">არსებულ ტურნირში შესვლა</string>
    <string name="create_tour">ტურნირის შექმნა</string>
    <string name="add">დამატება</string>
    <string name="find_by_name">მოძებნე სახელით...</string>
    <string name="confirm_email_info">თქვენს იმეილზე გამოიგზავნა ბმული, რომლითაც შეძლებთ რეგისტრაციის დადასტურებას</string>
    <string name="tournir_ended">ტურნირი დასრულდა, იხილეთ რეიტინგი</string>
</resources>
