<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".tournaments.create.viewpager.TournamentConfigFragment">

    <EditText
        android:id="@+id/etTournirName"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/bg_oval"
        android:hint="@string/tournir_name"
        android:paddingStart="10dp"
        android:textColor="@color/text_color"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/viewTimeChooser"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />


    <View
        android:id="@+id/viewTimeChooser"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/bg_oval"
        app:layout_constraintBottom_toTopOf="@+id/tvTime"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etTournirName">

    </View>

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="10dp"
        android:src="@drawable/ic_time"
        android:tint="@color/text_color"
        app:layout_constraintBottom_toBottomOf="@+id/viewTimeChooser"
        app:layout_constraintStart_toStartOf="@+id/viewTimeChooser"
        app:layout_constraintTop_toTopOf="@+id/viewTimeChooser" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/choose_time"
        android:textColor="@color/text_color"
        app:layout_constraintBottom_toBottomOf="@+id/viewTimeChooser"
        app:layout_constraintStart_toEndOf="@+id/imageView7"
        app:layout_constraintTop_toTopOf="@+id/viewTimeChooser" />

    <TextView
        android:id="@+id/txtNext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="20dp"
        android:text="@string/next"
        android:textColor="@color/text_color"
        android:textSize="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginBottom="20dp"
        android:background="@color/text_color"
        app:layout_constraintBottom_toTopOf="@+id/txtNext"
        tools:layout_editor_absoluteX="16dp" />

    <TextView
        android:id="@+id/tvTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textColor="@color/text_color"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/txtNext"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewTimeChooser" />

</androidx.constraintlayout.widget.ConstraintLayout>